Сборка под arm64: библиотека ядра и jar на две архитектуры
Задача кросс-сборки доведена до результата: указан линкер целевой
архитектуры (иначе rust-lld отвечает «incompatible with elf64-x86-64»),
Bluetooth в кросс-сборке выключен — bluer требует заголовков dbus целевой
архитектуры, включается -Pratatosk.arm64.bt=true.

Собран один jar на две архитектуры: ядро для linux-x86-64 и linux-aarch64
плюс графика skiko x64 и arm64. Имя jar говорит об обеих, потому что Compose
называет его по машине сборки. Запуск: java --enable-native-access=ALL-UNNAMED -jar.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_019pgSxdtGqw3MagG7wDmaGC